fix for accordion overflow

--- a/components/accordion.css
+++ b/components/accordion.css
@@ -42,6 +42,4 @@
 .accordion_preview {
     display: flex;
     flex-direction: column;
-    height: 400px;
-    overflow: auto;
 }
